sql/field.cc
@@ -2580,30 +2580,27 @@ void Field_new_decimal::sql_type(String &str) const
 
 int Field_tiny::store(const char *from,uint len,CHARSET_INFO *cs)
 {
-  int not_used;				// We can ignore result from str2int
   char *end;
-  long tmp= my_strntol(cs, from, len, 10, &end, &not_used);
-  int error= 0;
+  int error;
 
   if (unsigned_flag)
   {
-    if (tmp < 0)
+    ulonglong tmp= cs->cset->strntoull10rnd(cs, from, len, 1, &end, &error);
+    if (error == MY_ERRNO_ERANGE || tmp > 255)
     {
-      tmp=0; /* purecov: inspected */
-      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
-      error= 1;
-    }
-    else if (tmp > 255)
-    {
-      tmp= 255;
+      set_if_smaller(tmp, 255);
       set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
       error= 1;
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
+    else
+      error= 0;
+    ptr[0]= (char) tmp;
   }
   else
   {
+    longlong tmp= cs->cset->strntoull10rnd(cs, from, len, 0, &end, &error);
     if (tmp < -128)
     {
       tmp= -128;
@@ -2618,8 +2615,10 @@ int Field_tiny::store(const char *from,uint len,CHARSET_INFO *cs)
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
+    else
+      error= 0;
+    ptr[0]= (char) tmp;
   }
-  ptr[0]= (char) tmp;
   return error;
 }
 
@@ -2784,30 +2783,34 @@ void Field_tiny::sql_type(String &res) const
 
 int Field_short::store(const char *from,uint len,CHARSET_INFO *cs)
 {
-  int not_used;				// We can ignore result from str2int
   char *end;
-  long tmp= my_strntol(cs, from, len, 10, &end, &not_used);
-  int error= 0;
+  int error;
 
   if (unsigned_flag)
   {
-    if (tmp < 0)
+    ulonglong tmp= cs->cset->strntoull10rnd(cs, from, len, 1, &end, &error);
+    if (error == MY_ERRNO_ERANGE || tmp > UINT_MAX16)
     {
-      tmp=0;
-      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
-      error= 1;
-    }
-    else if (tmp > UINT_MAX16)
-    {
-      tmp=UINT_MAX16;
+      set_if_smaller(tmp, UINT_MAX16);
       set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
       error= 1;
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
+    else
+      error= 0;
+#ifdef WORDS_BIGENDIAN
+    if (table->s->db_low_byte_first)
+    {
+      int2store(ptr,tmp);
+    }
+    else
+#endif
+      shortstore(ptr,(short) tmp);
   }
   else
   {
+    longlong tmp= cs->cset->strntoull10rnd(cs, from, len, 0, &end, &error);
     if (tmp < INT_MIN16)
     {
       tmp= INT_MIN16;
@@ -2822,15 +2825,17 @@ int Field_short::store(const char *from,uint len,CHARSET_INFO *cs)
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
-  }
+    else
+      error= 0;
 #ifdef WORDS_BIGENDIAN
-  if (table->s->db_low_byte_first)
-  {
-    int2store(ptr,tmp);
-  }
-  else
+    if (table->s->db_low_byte_first)
+    {
+      int2store(ptr,tmp);
+    }
+    else
 #endif
-    shortstore(ptr,(short) tmp);
+      shortstore(ptr,(short) tmp);
+  }
   return error;
 }
 
@@ -3058,30 +3063,27 @@ void Field_short::sql_type(String &res) const
 
 int Field_medium::store(const char *from,uint len,CHARSET_INFO *cs)
 {
-  int not_used;				// We can ignore result from str2int
   char *end;
-  long tmp= my_strntol(cs, from, len, 10, &end, &not_used);
-  int error= 0;
+  int error;
 
   if (unsigned_flag)
   {
-    if (tmp < 0)
+    ulonglong tmp= cs->cset->strntoull10rnd(cs, from, len, 1, &end, &error);
+    if (error == MY_ERRNO_ERANGE || tmp > UINT_MAX24)
     {
-      tmp=0;
-      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
-      error= 1;
-    }
-    else if (tmp >= (long) (1L << 24))
-    {
-      tmp=(long) (1L << 24)-1L;
+      set_if_smaller(tmp, UINT_MAX24);
       set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
       error= 1;
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
+    else
+      error= 0;
+    int3store(ptr,tmp);
   }
   else
   {
+    longlong tmp= cs->cset->strntoull10rnd(cs, from, len, 0, &end, &error);
     if (tmp < INT_MIN24)
     {
       tmp= INT_MIN24;
@@ -3096,9 +3098,10 @@ int Field_medium::store(const char *from,uint len,CHARSET_INFO *cs)
     }
     else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
       error= 1;
+    else
+      error= 0;
+    int3store(ptr,tmp);
   }
-
-  int3store(ptr,tmp);
   return error;
 }
 
@@ -3294,64 +3297,47 @@ static bool test_if_minus(CHARSET_INFO *cs,
 
 int Field_long::store(const char *from,uint len,CHARSET_INFO *cs)
 {
-  ulong tmp_scan;
-  longlong tmp;
   long store_tmp;
   int error;
   char *end;
 
-  tmp_scan= cs->cset->scan(cs, from, from+len, MY_SEQ_SPACES);
-  len-= tmp_scan;
-  from+= tmp_scan;
-
-  end= (char*) from+len;
-  tmp= cs->cset->strtoll10(cs, from, &end, &error);
-
-  if (error != MY_ERRNO_EDOM)
+  if (unsigned_flag)
   {
-    if (unsigned_flag)
+    ulonglong tmp= cs->cset->strntoull10rnd(cs, from, len, 1, &end, &error);
+    if (error == MY_ERRNO_ERANGE || tmp > (ulonglong) UINT_MAX32)
     {
-      if (error < 0)
-      {
-        error= 1;
-        tmp= 0;
-      }
-      else if ((ulonglong) tmp > (ulonglong) UINT_MAX32)
-      {
-        tmp= UINT_MAX32;
-        error= 1;
-      }
-      else
-        error= 0;
+      set_if_smaller(tmp, (ulonglong) UINT_MAX32);
+      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
+      error= 1;
     }
+    else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
+      error= 1;
     else
-    {
-      if (error < 0)
-      {
-        error= 0;
-        if (tmp < INT_MIN32)
-        {
-          tmp= INT_MIN32;
-          error= 1;
-        }
-      }
-      else if (tmp > INT_MAX32)
-      {
-        tmp= INT_MAX32;
-        error= 1;
-      }
-    }
+      error= 0;
+    store_tmp= (long) tmp;
   }
-  if (error)
+  else
   {
-    error= error != MY_ERRNO_EDOM ? 1 : 2;
-    set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
+    longlong tmp= cs->cset->strntoull10rnd(cs, from, len, 0, &end, &error);
+    if (tmp < INT_MIN32)
+    {
+      tmp= INT_MIN32;
+      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
+      error= 1;
+    }
+    else if (tmp > INT_MAX32)
+    {
+      tmp=INT_MAX32;
+      set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
+      error= 1;
+    }
+    else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
+      error= 1;
+    else
+      error= 0;
+    store_tmp= (long) tmp;
   }
-  else if (from+len != end && table->in_use->count_cuted_fields &&
-           check_int(from,len,end,cs))
-    error= 2;
     
-  store_tmp= (long) tmp;
 #ifdef WORDS_BIGENDIAN
   if (table->s->db_low_byte_first)
   {
@@ -3587,33 +3573,20 @@ void Field_long::sql_type(String &res) const
 
 int Field_longlong::store(const char *from,uint len,CHARSET_INFO *cs)
 {
-  longlong tmp;
-  int error= 0;
+  int error;
   char *end;
+  ulonglong tmp;
 
-  tmp= cs->cset->scan(cs, from, from+len, MY_SEQ_SPACES);
-  len-= (uint)tmp;
-  from+= tmp;
-  if (unsigned_flag)
-  {
-    if (!len || test_if_minus(cs, from, from + len))
-    {
-      tmp=0;					// Set negative to 0
-      error= 1;
-    }
-    else
-      tmp=(longlong) my_strntoull(cs,from,len,10,&end,&error);
-  }
-  else
-    tmp=my_strntoll(cs,from,len,10,&end,&error);
-  if (error)
+  tmp= cs->cset->strntoull10rnd(cs,from,len,unsigned_flag,&end,&error);
+  if (error == MY_ERRNO_ERANGE)
   {
     set_warning(MYSQL_ERROR::WARN_LEVEL_WARN, ER_WARN_DATA_OUT_OF_RANGE, 1);
     error= 1;
   }
-  else if (from+len != end && table->in_use->count_cuted_fields &&
-           check_int(from,len,end,cs))
-    error= 2;
+  else if (table->in_use->count_cuted_fields && check_int(from,len,end,cs))
+    error= 1;
+  else
+    error= 0;
 #ifdef WORDS_BIGENDIAN
   if (table->s->db_low_byte_first)
   {
